@@ -1,8 +1,8 @@
 Package: VBLPCM
 Type: Package
 Title: Variational Bayes Latent Position Cluster Model for networks.
-Version: 2.4.2
-Date: 2013-10-31
+Version: 2.4.3
+Date: 2014-03-07
 Author: Michael Salter-Townshend
 Maintainer: Michael Salter-Townshend <mike.saltertownshend@gmail.com>
 Description: A package to fit and simulate latent position and cluster
@@ -10,9 +10,11 @@ Description: A package to fit and simulate latent position and cluster
 Depends: ergm, sna
 Imports: mclust
 SystemRequirements: Gnu Scientific Library version >= 1.12
+URL: http://www.r-project.org,
+        https://sites.google.com/site/mikesaltertownshend/software/
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2013-10-31 11:45:59 UTC; mst
+Packaged: 2014-03-07 15:13:08 UTC; salter
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-10-31 14:00:51
+Date/Publication: 2014-03-07 16:31:03
